source/blender/blenkernel/intern/constraint.c
@@ -89,6 +89,11 @@
 #  include "BPY_extern.h"
 #endif
 
+/* Workaround for cyclic depenndnecy with curves.
+ * In such case curve_cache might not be ready yet,
+ */
+#define CYCLIC_DEPENDENCY_WORKAROUND
+
 /* ************************ Constraints - General Utilities *************************** */
 /* These functions here don't act on any specific constraints, and are therefore should/will
  * not require any of the special function-pointers afforded by the relevant constraint 
@@ -1146,7 +1151,7 @@ static void followpath_flush_tars(bConstraint *con, ListBase *list, short nocopy
 	}
 }
 
-static void followpath_get_tarmat(bConstraint *con, bConstraintOb *UNUSED(cob), bConstraintTarget *ct, float UNUSED(ctime))
+static void followpath_get_tarmat(bConstraint *con, bConstraintOb *cob, bConstraintTarget *ct, float UNUSED(ctime))
 {
 	bFollowPathConstraint *data = con->data;
 	
@@ -1161,6 +1166,12 @@ static void followpath_get_tarmat(bConstraint *con, bConstraintOb *UNUSED(cob), 
 		/* note: when creating constraints that follow path, the curve gets the CU_PATH set now,
 		 *		currently for paths to work it needs to go through the bevlist/displist system (ton) 
 		 */
+
+#ifdef CYCLIC_DEPENDENCY_WORKAROUND
+		if (ct->tar->curve_cache == NULL) {
+			BKE_displist_make_curveTypes(cob->scene, ct->tar, FALSE);
+		}
+#endif
 
 		if (ct->tar->curve_cache->path && ct->tar->curve_cache->path->data) {
 			float quat[4];
@@ -1920,13 +1931,22 @@ static void pycon_id_looper(bConstraint *con, ConstraintIDFunc func, void *userd
 }
 
 /* Whether this approach is maintained remains to be seen (aligorith) */
-static void pycon_get_tarmat(bConstraint *con, bConstraintOb *UNUSED(cob), bConstraintTarget *ct, float UNUSED(ctime))
+static void pycon_get_tarmat(bConstraint *con, bConstraintOb *cob, bConstraintTarget *ct, float UNUSED(ctime))
 {
 #ifdef WITH_PYTHON
 	bPythonConstraint *data = con->data;
 #endif
 
 	if (VALID_CONS_TARGET(ct)) {
+#ifdef CYCLIC_DEPENDENCY_WORKAROUND
+		/* special exception for curves - depsgraph issues */
+		if (ct->tar->type == OB_CURVE) {
+			if (ct->tar->curve_cache == NULL) {
+				BKE_displist_make_curveTypes(cob->scene, ct->tar, FALSE);
+			}
+		}
+#endif
+
 		/* firstly calculate the matrix the normal way, then let the py-function override
 		 * this matrix if it needs to do so
 		 */
@@ -2993,8 +3013,16 @@ static void clampto_flush_tars(bConstraint *con, ListBase *list, short nocopy)
 	}
 }
 
-static void clampto_get_tarmat(bConstraint *UNUSED(con), bConstraintOb *UNUSED(cob), bConstraintTarget *ct, float UNUSED(ctime))
+static void clampto_get_tarmat(bConstraint *UNUSED(con), bConstraintOb *cob, bConstraintTarget *ct, float UNUSED(ctime))
 {
+#ifdef CYCLIC_DEPENDENCY_WORKAROUND
+	if (VALID_CONS_TARGET(ct)) {
+		if (ct->tar->curve_cache == NULL) {
+			BKE_displist_make_curveTypes(cob->scene, ct->tar, FALSE);
+		}
+	}
+#endif
+
 	/* technically, this isn't really needed for evaluation, but we don't know what else
 	 * might end up calling this...
 	 */
@@ -3648,8 +3676,16 @@ static void splineik_flush_tars(bConstraint *con, ListBase *list, short nocopy)
 	}
 }
 
-static void splineik_get_tarmat(bConstraint *UNUSED(con), bConstraintOb *UNUSED(cob), bConstraintTarget *ct, float UNUSED(ctime))
+static void splineik_get_tarmat(bConstraint *UNUSED(con), bConstraintOb *cob, bConstraintTarget *ct, float UNUSED(ctime))
 {
+#ifdef CYCLIC_DEPENDENCY_WORKAROUND
+	if (VALID_CONS_TARGET(ct)) {
+		if (ct->tar->curve_cache == NULL) {
+			BKE_displist_make_curveTypes(cob->scene, ct->tar, FALSE);
+		}
+	}
+#endif
+
 	/* technically, this isn't really needed for evaluation, but we don't know what else
 	 * might end up calling this...
 	 */
